# music_graph

./: .env.dist  README.md  pyproject.toml
docs/clustering/: clustering.md
docs/general/: graph.drawio  graph_augmented.drawio  graph_creation.md
docs/recommendation/: recommendation_general.md
music_graph/abstract/: client.py  fetcher.py  matcher.py
music_graph/data/: general_fetcher.py  general_matcher.py
music_graph/datamodel/: album.py  artist.py  audio_analysis.py  audio_features.py  base_data.py  playlist.py  track.py  user_info.py
music_graph/datamodel/graph/: graph.py  node.py
music_graph/utils/: spotify_client.py  streaming_client_builder.py  tidal_client.py
music_graph/utils/converter/: tidal_converter.py
tests/units/: test_logger.py
